changed grid template to use fr rather than percentages to make sure the sidebar is always completely visible

--- a/public/stylesheets/mindMapPageStyling.css
+++ b/public/stylesheets/mindMapPageStyling.css
@@ -1,5 +1,5 @@
 /* lets use a css grid to contain the various components of the mind map page! */
 .wrapper {
     display: grid;
-    grid-template-columns: 30% 70%;
+    grid-template-columns: 1fr 2fr;
 }
